--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,13 @@
   "description": "Adminsitra las ganaderias regenerativas",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Javitria",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "firebase-admin": "^10.0.0"
+  }
 }
